Adding some new stuff

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ rel="stylesheet">
                 <div class="skills-box">
                     <p class="skills-title">Tools</p>
                     <div><i class="devicon-markdown-original" alt="Markdown">Markdown</i></div>
+                    <div><img style="max-width: 50px; height: auto; margin-top: 10px" src="img/icons8-power-bi-48.png" alt="Power BI"><p class="powerbi">Power BI</p></a></div>
                     <div><i class="devicon-vscode-plain colored" alt="VSCode">VSCode</i></div>
                     <div><i class="devicon-github-plain" alt="GitHub">GitHub</i></div>
                     <div><i class="devicon-docker-plain colored" alt="Docker">Docker</i></div>
@@ -68,9 +69,9 @@ rel="stylesheet">
                 </div>
                 <div class="skills-box">
                     <p class="skills-title">Databases</p>
-                    <div><img class="mariadb-icon-img" src="img/mariadb-icon.svg" alt="MariaDB"></a></div>
                     <div><i class="devicon-microsoftsqlserver-plain colored" alt="SQL Server">SQL Server</i></div>
                     <div><i class="devicon-postgresql-plain colored" alt="PostgreSQL">PostgreSQL</i></div>
+                    <div><img class="mariadb-icon-img" style="max-width: 300px; height: auto; margin-top: 10px" src="img/mariadb-icon.svg" alt="MariaDB"></a></div>
                     <div><i class="devicon-mysql-plain colored" alt="MySQL">MySQL</i></div>
                     <div><i class="devicon-sqlite-plain colored" alt="SQLite">SQLite</i></div>
                 </div>
